--- a/index_en.html
+++ b/index_en.html
@@ -34,7 +34,9 @@
             <h1 class="custom-title h3 h2-md h1-lg mb-1">
               AI Dynamic Skeleton Fall-Prevention Group Dashboard
             </h1>
-            <h2 class="custom-subtitle h5 h4-md h3-lg mb-0">Singapore</h2>
+            <h2 class="custom-subtitle h5 h4-md h3-lg mb-0">
+              Quancheng Social Welfare Foundation
+            </h2>
           </div>
           <div class="text-end">
             <p class="text-secondary mb-0">
