--- a/index_ja.html
+++ b/index_ja.html
@@ -32,7 +32,7 @@
             <h1 class="custom-title h3 h2-md h1-lg mb-1">
               AI動的骨格転倒予防グループダッシュボード
             </h1>
-            <h2 class="custom-subtitle h5 h4-md h3-lg mb-0">シンガポール</h2>
+            <h2 class="custom-subtitle h5 h4-md h3-lg mb-0">泉城社会福祉基金</h2>
           </div>
           <div class="text-end">
             <p class="text-secondary mb-0">
