--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             <h1 class="custom-title h3 h2-md h1-lg mb-1">
               AI動態骨架防跌群體儀表板
             </h1>
-            <h2 class="custom-subtitle h5 h4-md h3-lg mb-0">新加坡</h2>
+            <h2 class="custom-subtitle h5 h4-md h3-lg mb-0">
+              全成社會福利基金會
+            </h2>
           </div>
           <div class="text-end">
             <p class="text-secondary mb-0">
