修正語系顯示問題

--- a/index_en.html
+++ b/index_en.html
@@ -555,7 +555,7 @@
             <div class="risk-box risk-yellow p-3">
               <div class="d-flex justify-content-between align-items-center">
                 <div>
-                  <h6 class="fw-bold text-warn mb-0">B-level</h6>
+                  <h6 class="fw-bold text-warn mb-0">Level B</h6>
                   <p class="small text-warn mb-0">Frail (SPPB=4-6 points)</p>
                 </div>
                 <div class="fs-3 fw-bold text-warn" id="riskB">0</div>
@@ -574,7 +574,7 @@
             <div class="risk-box risk-blue p-3">
               <div class="d-flex justify-content-between align-items-center">
                 <div>
-                  <h6 class="fw-bold text-primary mb-0">C-level</h6>
+                  <h6 class="fw-bold text-primary mb-0">Level C</h6>
                   <p class="small text-primary mb-0">
                     Pre-frailty (SPPB=7-9 points)
                   </p>
@@ -595,7 +595,7 @@
             <div class="risk-box risk-green p-3">
               <div class="d-flex justify-content-between align-items-center">
                 <div>
-                  <h6 class="fw-bold text-success mb-0">D-level</h6>
+                  <h6 class="fw-bold text-success mb-0">Level D</h6>
                   <p class="small text-success mb-0">
                     Healthy people (SPPB=10-12 points)
                   </p>
