--- a/index_ko.html
+++ b/index_ko.html
@@ -522,7 +522,7 @@
             <div class="risk-box risk-red p-3">
               <div class="d-flex justify-content-between align-items-center">
                 <div>
-                  <h6 class="fw-bold text-danger mb-0">레벨 A</h6>
+                  <h6 class="fw-bold text-danger mb-0">A등급</h6>
                   <p class="small text-danger mb-0">장애인(SPPB=0-3점)</p>
                 </div>
                 <div class="fs-3 fw-bold text-danger" id="riskA">0</div>
@@ -541,7 +541,7 @@
             <div class="risk-box risk-yellow p-3">
               <div class="d-flex justify-content-between align-items-center">
                 <div>
-                  <h6 class="fw-bold text-warn mb-0">B 레벨</h6>
+                  <h6 class="fw-bold text-warn mb-0">B등급</h6>
                   <p class="small text-warn mb-0">허약함(SPPB=4-6점)</p>
                 </div>
                 <div class="fs-3 fw-bold text-warn" id="riskB">0</div>
@@ -560,7 +560,7 @@
             <div class="risk-box risk-blue p-3">
               <div class="d-flex justify-content-between align-items-center">
                 <div>
-                  <h6 class="fw-bold text-primary mb-0">C 레벨</h6>
+                  <h6 class="fw-bold text-primary mb-0">C등급</h6>
                   <p class="small text-primary mb-0">전노쇠성(SPPB=7-9점)</p>
                 </div>
                 <div class="fs-3 fw-bold text-primary" id="riskC">0</div>
@@ -579,7 +579,7 @@
             <div class="risk-box risk-green p-3">
               <div class="d-flex justify-content-between align-items-center">
                 <div>
-                  <h6 class="fw-bold text-success mb-0">D-레벨</h6>
+                  <h6 class="fw-bold text-success mb-0">D등급</h6>
                   <p class="small text-success mb-0">
                     건강한 사람(SPPB=10-12점)
                   </p>
