--- a/index_en.html
+++ b/index_en.html
@@ -109,7 +109,7 @@
               </ul>
             </div>
             <button id="downloadBtn" class="btn btn-primary">
-              <i class="bi bi-download me-1"></i> 下載
+              <i class="bi bi-download me-1"></i> Download
             </button>
           </div>
         </div>
