修整詳細資料顯示問題

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="zh-TW">
   <head>
     <meta charset="UTF-8" />
@@ -45,7 +45,9 @@
                   <h1 class="custom-title h3 h2-md h1-lg mb-1">
                     AI動態骨架防跌群體儀表板
                   </h1>
-                  <h2 class="custom-subtitle h5 h4-md h3-lg mb-0">香柏樹</h2>
+                  <h2 class="custom-subtitle h5 h4-md h3-lg mb-0">
+                    全成社會福利基金會
+                  </h2>
                 </div>
                 <div class="text-end">
                   <p class="text-secondary mb-0">
@@ -88,7 +90,7 @@
                       <li>
                         <button
                           class="dropdown-item"
-                          onclick="switchLanguage('index.html','zh')"
+                          onclick="switchLanguage('index.html', 'zh')"
                         >
                           繁體中文
                         </button>
@@ -96,7 +98,7 @@
                       <li>
                         <button
                           class="dropdown-item"
-                          onclick="switchLanguage('index_en.html','en')"
+                          onclick="switchLanguage('index_en.html', 'en')"
                         >
                           ENGLISH
                         </button>
@@ -104,7 +106,7 @@
                       <li>
                         <button
                           class="dropdown-item"
-                          onclick="switchLanguage('index_ja.html','ja')"
+                          onclick="switchLanguage('index_ja.html', 'ja')"
                         >
                           日本語
                         </button>
@@ -112,7 +114,7 @@
                       <li>
                         <button
                           class="dropdown-item"
-                          onclick="switchLanguage('index_ko.html','ko')"
+                          onclick="switchLanguage('index_ko.html', 'ko')"
                         >
                           한국어
                         </button>
