--- a/index_en.html
+++ b/index_en.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -52,7 +52,7 @@
                   <h1 class="custom-title h3 h2-md h1-lg mb-1">
                     AI Dynamic Skeleton Fall-Prevention Group Dashboard
                   </h1>
-                  <h2 class="custom-subtitle h5 h4-md h3-lg mb-0">Cedar</h2>
+                  <h2 class="custom-subtitle h5 h4-md h3-lg mb-0">quancheng</h2>
                 </div>
                 <div class="text-end">
                   <p class="text-secondary mb-0">
@@ -93,7 +93,7 @@
                       <li>
                         <button
                           class="dropdown-item"
-                          onclick="switchLanguage('index.html','zh')"
+                          onclick="switchLanguage('index.html', 'zh')"
                         >
                           繁體中文
                         </button>
@@ -101,7 +101,7 @@
                       <li>
                         <button
                           class="dropdown-item"
-                          onclick="switchLanguage('index_en.html','en')"
+                          onclick="switchLanguage('index_en.html', 'en')"
                         >
                           ENGLISH
                         </button>
@@ -109,7 +109,7 @@
                       <li>
                         <button
                           class="dropdown-item"
-                          onclick="switchLanguage('index_ja.html','ja')"
+                          onclick="switchLanguage('index_ja.html', 'ja')"
                         >
                           日本語
                         </button>
@@ -117,7 +117,7 @@
                       <li>
                         <button
                           class="dropdown-item"
-                          onclick="switchLanguage('index_ko.html','ko')"
+                          onclick="switchLanguage('index_ko.html', 'ko')"
                         >
                           한국어
                         </button>
