--- a/index_ko.html
+++ b/index_ko.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -46,7 +46,9 @@
                   <h1 class="custom-title h3 h2-md h1-lg mb-1">
                     AI 동적 골격 낙상 예방 그룹 대시보드
                   </h1>
-                  <h2 class="custom-subtitle h5 h4-md h3-lg mb-0">삼나무</h2>
+                  <h2 class="custom-subtitle h5 h4-md h3-lg mb-0">
+                    취안청 사회복지재단
+                  </h2>
                 </div>
                 <div class="text-end">
                   <p class="text-secondary mb-0">
